--- a/assignment1-ph1/assignment1-ph1.csproj
+++ b/assignment1-ph1/assignment1-ph1.csproj
@@ -44,8 +44,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandCenter.cs" />
+    <Compile Include="HelpCommand.cs" />
+    <Compile Include="ICommand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SetNameCommand.cs" />
+    <Compile Include="StatusCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
